Footer logo overlap fix. This fantastic theme adds a height to the widget areas, so I'm having to override these when we find the :).

--- a/src/style.scss
+++ b/src/style.scss
@@ -330,6 +330,10 @@ h6 {
 				background-repeat: no-repeat;
 			}
 
+			.widget-area.masonry {
+				height: auto;
+			}
+
 		}
 
 	}
